# avail-bridge-examples

./: Cargo.toml  README.md  config.toml
examples/: avail_attestation.rs  avail_eth_send_msg.rs  avail_eth_token_transfer.rs  eth_avail_send_msg.rs  eth_avail_token_transfer.rs
examples/deno/: attestation.ts  avail_eth.ts  avail_eth_amb.ts  avail_eth_token.ts  eth_avail.ts  eth_avail_amb.ts  eth_avail_token.ts
examples/deno/abi/: availbridge.json
src/: availbridge.json  lib.rs
