[package]
name = "avail_bridge_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avail-rust = { git = "https://github.com/availproject/avail" }
tokio = { version = "1.35", features = ["full"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
sp-core = { version = "21.0.0" }
hex = "0.4"
hex-literal = "0.3.4"
anyhow = "1.0.79"
reqwest = { version = "0.11.24", features = ["json"] }
ringbuffer = { version = "0.15.0", features = ["alloc"] }
secp256k1 = "0.28"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
chrono = "0.4.34"
confy = "0.6"
tokio-test = "0.4"
alloy-sol-types = { version = "0.7.4", features = ["json"] }
alloy-sol-macro = { version = "0.7.4", features = ["json"] }
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.2.1" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", version = "0.2.1" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", version = "0.2.1" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", version = "0.2.1" }
# alloy-primitives = { git = "https://github.com/alloy-rs/alloy", version = "0.2.1" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", version = "0.2.1" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", version = "0.2.1" }
toml = "0.8.19"



[profile.release]
panic = 'abort'
